--- a/Companion.Bot/Bot.csproj
+++ b/Companion.Bot/Bot.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="4q-dev.ResultSharp" Version="1.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
